--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
        </div>
        <div class="col-md-4">
          <div class="card">
-           <img src="images/comingsoon.jpeg" class="rounded-circle" alt="">
+           <img src="images/amadou.jpg" class="rounded-circle" alt="">
            <div class="card-body">
              <h4 class="card-title">Amadou Gaye</h4>
  <!-- YOU CAN WRITE THE PROFILE AFTER PRESIDENT -->
@@ -203,7 +203,7 @@
         </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="images/comingsoon.jpeg" class="rounded-circle" alt="">
+          <img src="images/issa.jpg" class="rounded-circle" alt="">
           <div class="card-body">
             <h4 class="card-title">Issa Ndiong</h4>
 <!-- YOU CAN WRITE THE PROFILE AFTER PRESIDENT -->
